# stork

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .prettierrc  .stork-project-root  .travis.yml  Cargo.toml  Makefile.toml  README.md  build.js  changelog.md  codecov.yml  deploy-runbook.md  deploy.md  federalist-compressed-test.st  federalist.st  index.html  jest.config.js  justfile  notes.md  package-lock.json  package.json  readme.md  stork.js  todo  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.github/: FUNDING.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  improvement_request.md
.github/workflows/: build-artifact.yml  ci-on-push.yml  ci.yml  clippy-check.yml  create-release-after-tag.yml  distribute-release-after-publish.yml  fmt.yml  lint.yml  release.yml  set-labels.yml  test.yml  upload-release-asset.yml
archive/: .babelrc  .gitignore  Makefile.toml  package-lock.json
archive/src/: index_helpers.rs  lib.rs  main.rs  utils.rs
benches/: basic.rs
dev/: mprocs.yml
dev/configs/: 3b1b.toml  bowdoin-orient.toml  federalist.toml  (+1 more)
docs/: contributing.md  deploy.md
example/: federalist.toml
js/: .eslintignore  .eslintrc.js  .prettierrc  build.js  config.js  config.test.ts  config.ts  dom.js  dom.ts  entity.test.ts  entity.ts  entityDom.test.ts  entityDom.ts  entityDomManager.ts  entityLoader.ts  entityManager.test.ts  entityManager.ts  entityStore.ts  htmlManipulation.ts  index.js  index.ts  indexLoader.ts  jest.config.js  loadManager.ts  main.js  main.test.ts  main.ts  package.json  pencil.js  pencil.ts  resultToListItem.test.ts  resultToListItem.ts  searchData.ts  stork.css  test-environment.js  util.ts  wasmLoader.ts  wasmManager.test.ts  wasmManager.ts  wasmQueue.test.ts  (+2 more)
js-aside/: entity.ts  entityDom.test.ts  entityDom.ts  entityManager.test.ts  main.test.ts  resultToListItem.ts  util.ts
local-dev/: index.html
scripts/: build.sh  build_dev_indexes.py  clippy.sh  compare_stats.py  develop.sh  download_test_corpora.sh  generate_stats.py  serve.sh  upload_build_artifacts.py  upload_federalist.py
src/: argparse.rs  common.rs  index.js  index_analyzer.rs  lib.rs  main.rs  models.rs  wasm.rs
static/: basic.css  index.html
stork-boundary/: Cargo.toml
stork-boundary/src/: in.rs  input.rs  lib.rs  output.rs
stork-cli/: Cargo.toml
stork-cli/src/: clap.rs  display_timings.rs  errors.rs  io.rs  main.rs  pretty_print_search_results.rs  string_utils.rs
stork-cli/src/app/: build.rs  mod.rs  search.rs  test.rs
stork-cli/src/errors/: mod.rs
stork-cli/src/io/: mod.rs
stork-cli/src/prettyprint/: mod.rs
stork-cli/src/progress/: mod.rs
stork-cli/src/test_server/: index.html  mod.rs
stork-cli/src/timings/: mod.rs
stork-config/: Cargo.toml
stork-index-v2/: Cargo.toml
stork-index-v2/src/: lib.rs  scores.rs  search.rs
stork-index-v3/: Cargo.toml
stork-lib/: Cargo.toml
stork-lib/benches/: basic.rs  federalist.toml
stork-lib/bindings/: Config.ts  DataSource.ts  Document.ts  Excerpt.ts  File.ts  Filetype.ts  FrontmatterConfig.ts  HTMLConfig.ts  HighlightRange.ts  IndexStatistics.ts  InputConfig.ts  OutputConfig.ts  SRTConfig.ts  SearchOutput.ts  SearchResult.ts  StemmingConfig.ts  TitleBoost.ts
stork-lib/src/: importance_value.rs  input.rs  lib.rs  output.rs  stopwords.rs  string_utils.rs  wasm.rs
stork-lib/src/build_config/: errors.rs  file.rs  frontmatter.rs  html.rs  input.rs  local.rs  mod.rs  output.rs  srt.rs  stemming.rs
stork-lib/src/build_output/: document_problem.rs  error.rs  errors.rs  mod.rs  progress.rs  success.rs  warning.rs
stork-lib/src/common/: mod.rs
stork-lib/src/config/: file.rs  frontmatter.rs  input.rs  local.rs  mod.rs  output.rs  srt.rs  stemming.rs
stork-lib/src/envelope/: mod.rs
stork-lib/src/fields/: mod.rs
stork-lib/src/index_v2/: mod.rs  search.rs
stork-lib/src/index_v3/: Cargo.toml  mod.rs  ordered_map_serialize.rs  read.rs  write.rs
stork-lib/src/index_v3/search/: entry_and_intermediate_excerpts.rs  intermediate_excerpt.rs  mod.rs
stork-lib/src/index_v4/: disk.rs  mod.rs  search.rs  tree.rs
stork-lib/src/index_v4/search/: bucket_search_values.rs  build_output_excerpt.rs  build_output_result.rs  excerpt_grouping.rs  group_document_excerpts.rs  mod.rs  title_highlight_ranges.rs
stork-lib/src/index_v4/search/line_item/: merge.rs  mod.rs
stork-lib/src/index_v4/tree/: arena.rs  mod.rs  node.rs
stork-lib/src/index_versions/v2/: mod.rs  search.rs  structs.rs
stork-lib/src/index_versions/v3/: reader.rs  scores.rs  structs.rs
stork-lib/src/index_versions/v3/builder/: annotated_words_from_string.rs  errors.rs  fill_containers.rs  intermediate_entry.rs  mod.rs  nudger.rs
stork-lib/src/index_versions/v3/builder/fill_intermediate_entries/: frontmatter.rs  mod.rs
stork-lib/src/index_versions/v3/builder/fill_intermediate_entries/data_source_readers/: filepath_data_source_reader.rs  mod.rs  url_data_source_reader.rs
stork-lib/src/index_versions/v3/builder/fill_intermediate_entries/word_list_generators/: html_word_list_generator.rs  markdown_word_list_generator.rs  mod.rs  plaintext_word_list_generator.rs  srt_word_list_generator.rs
stork-lib/src/index_versions/v3/search/: entry_and_intermediate_excerpts.rs  intermediate_excerpt.rs  mod.rs
stork-lib/src/input/: deserialized_index.rs  mod.rs  versioned_blob.rs
stork-lib/src/merge_search_results/: mod.rs
stork-lib/src/parse_index/: error.rs  errors.rs  mod.rs
stork-lib/src/search_output/: errors.rs  mod.rs
stork-lib/src/search_query/: mod.rs
stork-lib/src/search_value/: mod.rs
stork-lib/src/searcher/: mod.rs
stork-shared/: Cargo.toml
stork-wasm/: Cargo.toml
stork-wasm/src/: lib-old.rs  lib.rs
test/: a.toml  federalist-min.toml  federalist.toml  federalist3.toml  web.toml
test-assets/: federalist-min-0.6.0.st  federalist-min-1.0.0.st  federalist-min-1.5.0.st  federalist-min.st  federalist-min.toml  federalist.toml
themes/: basic.css  dark.css  edible-dark.css  edible.css  flat.css
(+194 files in other folders)
