[package]
name = "stork-search"
version = "0.7.4"
authors = ["James Little <littleguy23@gmail.com>"]
edition = "2018"
documentation = "https://stork-search.net/docs"
homepage = "https://stork-search.net"
description = "Impossibly fast web search, made for static sites."
repository = "https://github.com/jameslittle230/stork"
license = "Apache-2.0"
keywords = ["wasm", "webassembly", "search", "javascript"]
categories = ["wasm"]
exclude = ['/dist/', 'node_modules/', '/test/', '/test-assets/',]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
rmp-serde = "0.14.3"
serde_json = "1.0"
console_error_panic_hook = "0.1.6"
num-format = "0.4.0"
rust-stemmers = "1.2.0"
srtparse = "0.2.0"
htmlescape = "0.3.1"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[profile.release]
lto = true
