[package]
name = "stork-search"
version = "2.0.0-beta.2"
authors = ["James Little <littleguy23@gmail.com>"]
edition = "2021"
documentation = "https://stork-search.net/docs"
homepage = "https://stork-search.net"
description = "Impossibly fast web search, made for static sites."
repository = "https://github.com/jameslittle230/stork"
license = "Apache-2.0"
keywords = ["wasm", "webassembly", "search", "javascript"]
categories = ["wasm"]

[features]
default = ["test-server"]
test-server = ["hyper", "tokio"]
remote-fetch = ['stork-lib/build-remote-fetch']

[dependencies]
atty = "0.2.14"
bytes = "1.1.0"
clap = { version = "3.2.16", features = ["cargo", "wrap_help"] }
colored = "2.0.0"
hyper = { version = "0.14.17", optional = true, features = [
    "server",
    "http1",
    "tcp"
] }
indicatif = "0.17.0"
lazy_static = "1.4.0"
num-format = "0.4.0"
serde = "1.0.130"
serde_json = "1.0.68"
stork-lib = { path = "../stork-lib", version = "2.0.0-beta.2", features = [
    "build"
] }
strunc = "0.1.1"
textwrap = { version = "0.14.2", features = ["terminal_size"] }
thiserror = "1.0.29"
tokio = { version = "=1.17.0", optional = true, features = [
    "signal",
    "rt-multi-thread"
] }
unicode-segmentation = "1.9.0"

[dev-dependencies]
pretty_assertions = "1.0.0"

[[bin]]
name = "stork"
path = "src/main.rs"
