[package]
name = "stork-index-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
stork-boundary = { path = "../stork-boundary" }
stork-shared = { path = "../stork-shared" }

[dev-dependencies]
serde_json = "1.0.68"
