[package]
name = "stork-lib"
version = "1.4.1"
authors = ["James Little <littleguy23@gmail.com>"]
edition = "2021"
documentation = "https://stork-search.net/docs"
homepage = "https://stork-search.net"
description = "Impossibly fast web search, made for static sites."
repository = "https://github.com/jameslittle230/stork"
license = "Apache-2.0"
keywords = ["wasm", "webassembly", "search", "javascript"]
categories = ["wasm"]
exclude = ['/dist/', 'node_modules/', '/test/', '/test-assets/']

[features]
default = ["build-v3-web-scraping"]
search-v2 = ["bincode"]
search-v3 = ["rmp-serde"]
build-v3 = [
    "search-v3",
    "num-format",
    "markdown",
    "mime",
    "srtparse",
    "kuchiki",
    "frontmatter",
    "indicatif",
]
build-v3-web-scraping = ["build-v3", "reqwest"]

[dependencies]
bytes = "1.1.0"
thiserror = "1.0.29"
rust-stemmers = "1.2.0"
colored = { version = "2.0.0", optional = true } # colored console output
console_error_panic_hook = { version = "0.1.6", optional = true }
num-format = { version = "0.4.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
smart-default = "0.6.0"
serde_json = "1.0.72"
toml = "0.5.8"
frontmatter = { version = "0.4.0", optional = true }
indicatif = { version = "0.16.2", optional = true }
kuchiki = { version = "0.8.1", optional = true }
markdown = { version = "0.3.0", optional = true }
mime = { version = "0.3.16", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
rmp-serde = { version = "0.15.5", optional = true }
srtparse = { version = "0.2.0", optional = true }
unicode-segmentation = "1.8.0"
bincode = { version = "1.3.3", optional = true }
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
hex-literal = "0.3.4"
pretty_assertions = "1.0.0"

[[bench]]
name = "basic"
harness = false
