[package]
name = "stork-lib"
version = "2.0.0-beta.2"
edition = "2021"

[features]
build = [
    'thiserror',
    'toml',
    'serde_json',
    'srtparse',
    'frontmatter',
    'kuchiki',
    'pulldown-cmark',
    'rust-tfidf',
    'strunc'
]
build-remote-fetch = ['build', 'mime', 'reqwest']

# json-search-output = ['serde']
[dependencies]
bstr = "1.0.1"
bytes = "1.2.1"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
rmp-serde = "1.1.1"
wasm-bindgen = "0.2.83"
rust-stemmers = "1.2.0"
itertools = "0.10.3"
unicode-segmentation = "1.8.0"
smart-default = { version = "0.6.0" }
### build deps
strunc = { version = "0.1.1", optional = true }
thiserror = { version = "1.0.29", optional = true }
toml = { version = "0.5.8", optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = false }
serde_json = { version = "1.0.72", optional = true }
srtparse = { version = "0.2.0", optional = true }
frontmatter = { version = "0.4.0", optional = true }
kuchiki = { version = "0.8.1", optional = true }
pulldown-cmark = { version = "0.9.1", optional = true }
rust-tfidf = { version = "1.1.1", optional = true }
### build-remote-fetch deps
mime = { version = "0.3.16", optional = true }
reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }
ts-rs = "6.2.1"

[dev-dependencies]
hex-literal = "0.3.4"
pretty_assertions = "1.3.0"
