[package]
name = "stork-lib"
version = "2.0.0-beta.2"
edition = "2021"
authors = ["James Little <littleguy23@gmail.com>"]
documentation = "https://stork-search.net/docs"
homepage = "https://stork-search.net"
description = "Impossibly fast web search, made for static sites."
repository = "https://github.com/jameslittle230/stork"
license = "Apache-2.0"
keywords = ["wasm", "webassembly", "search", "javascript"]
categories = ["wasm"]
exclude = ['/bindings/']

[features]
build = [
    'thiserror',
    'toml',
    'serde_json',
    'srtparse',
    'frontmatter',
    'kuchiki',
    'pulldown-cmark',
    'rust-tfidf',
    'strunc',
    'strum',
    'strum_macros',
]
build-remote-fetch = ['build', 'mime', 'reqwest']

[dependencies]
bstr = "1.0.1"
bytes = "1.2.1"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
rmp-serde = "1.1.1"
wasm-bindgen = "0.2.83"
rust-stemmers = "1.2.0"
itertools = "0.10.3"
unicode-segmentation = "1.8.0"
smart-default = { version = "0.6.0" }
ts-rs = "6.2.1"
### build deps
strunc = { version = "0.1.1", optional = true }
thiserror = { version = "1.0.29", optional = true }
toml = { version = "0.5.8", optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = false }
serde_json = { version = "1.0.72", optional = true }
srtparse = { version = "0.2.0", optional = true }
frontmatter = { version = "0.4.0", optional = true }
kuchiki = { version = "0.8.1", optional = true }
pulldown-cmark = { version = "0.9.1", optional = true }
rust-tfidf = { version = "1.1.1", optional = true }
strum = { version = "0.24", optional = true }
strum_macros = { version = "0.24", optional = true }
### build-remote-fetch deps
mime = { version = "0.3.16", optional = true }
reqwest = { version = "0.11", optional = true, features = ["blocking", "json"] }

[dev-dependencies]
hex-literal = "0.3.4"
pretty_assertions = "1.3.0"
