[package]
name = "stork-wasm"
version = "1.4.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["v3"]
v2 = ["stork-lib/search-v2"]
v3 = ["stork-lib/search-v3"]

[dependencies]
console_error_panic_hook = "0.1.6"
serde = "1.0.130"
serde_json = "1.0.68"
wasm-bindgen = "0.2.78"
stork-lib = { path = "../stork-lib", default-features = false }
bytes = "1.1.0"
thiserror = "1.0.29"
