[package]
name = "stork-wasm"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["v3"]
v2 = ["stork-lib/search-v2"]
v3 = ["stork-lib/search-v3"]

[dependencies]
console_error_panic_hook = "0.1.6"
serde = "1.0.130"
serde_json = "1.0.68"
wasm-bindgen = "0.2.83"
stork-lib = { path = "../stork-lib", default-features = false }
bytes = "1.2.1"
thiserror = "1.0.29"
lazy_static = "1.4.0"
once_cell = "1.14.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
