[package]
name = "stork-wasm"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
stork-lib = { path = "../stork-lib", default-features = false }
console_error_panic_hook = "0.1.7"
bytes = "1.2.1"
lazy_static = "1.4.0"
serde = "1.0.152"
serde_json = "1.0.91"

[features]
